# Skripsie

./: README.md
FastCap0.1/: CMakeLists.txt  top.qui
FastCap0.1/src/: capsolve.c  mulDisplay.c  zbufGlobal.h  zbufProj.c
Gmesh0.0/.geo files/: model2.geo
Gmesh0.0/PostStep/model1/: Conductor1Panel3.stp  Conductor1Panel4.stp  Conductor2Panel2.stp  Conductor2Panel3.stp  Conductor2Panel4.stp  Conductor2Panel5.stp  Conductor2Panel6.stp
Gmesh0.0/PostStep/model2/: C1P5.stp  C1P6.stp  C2P6.stp
Gmesh0.0/PostStep/model3/: Conductor1Panel1.stp  Conductor1Panel10.stp  Conductor1Panel11.stp  Conductor1Panel12.stp  Conductor1Panel13.stp  Conductor1Panel14.stp  Conductor1Panel15.stp  Conductor1Panel16.stp  Conductor1Panel17.stp  Conductor1Panel18.stp  Conductor1Panel19.stp  Conductor1Panel2.stp  Conductor1Panel20.stp  Conductor1Panel21.stp  Conductor1Panel22.stp  Conductor1Panel23.stp  Conductor1Panel24.stp  Conductor1Panel25.stp  Conductor1Panel26.stp  Conductor1Panel27.stp  Conductor1Panel28.stp  Conductor1Panel29.stp  Conductor1Panel3.stp  Conductor1Panel30.stp  Conductor1Panel31.stp  Conductor1Panel32.stp  Conductor1Panel33.stp  Conductor1Panel34.stp  Conductor1Panel35.stp  Conductor1Panel36.stp  Conductor1Panel37.stp  Conductor1Panel38.stp  Conductor1Panel39.stp  Conductor1Panel4.stp  Conductor1Panel40.stp  Conductor1Panel41.stp  Conductor1Panel42.stp  Conductor1Panel43.stp  (+54 more)
Gmesh0.0/Step/: Model2.stp  Model3Circuit.stp  Model3_C1.stp  Model3_C2.stp
QuiGen0.2/: BitmapGen.c  CMakeLists.txt  DielectricBound.c  DielectricStepGen.c  Global.h  GlobalStructures.h  ListGen.c  QuiGen.c  StepGen.c  fastcap  main.c
